change 3d render to puddles

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "three": "^0.110.0",
+    "three-collada-loader": "0.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
